--- a/package.json
+++ b/package.json
@@ -6,8 +6,14 @@
   "directories": {
     "test": "test"
   },
+  "files": [
+    "LICENSE",
+    "README.md",
+    "monfy.js"
+  ],
   "scripts": {
-    "test": "nyc --reporter=html --reporter=text mocha --timeout=3000 .\\test\\*.test.js"
+    "test": "nyc --reporter=html --reporter=text mocha --timeout=3000 .\\test\\*.test.js",
+    "cover": "nyc --reporter=lcov --reporter=text-lcov npm test"
   },
   "repository": {
     "type": "git",
